--- a/style.css
+++ b/style.css
@@ -218,6 +218,9 @@ a {
     .nav__logo img {
         height: 50px;
     }
+    .nav__logo .cm-img{
+        display: none;
+    }
 }
 
 .nav__link {
@@ -412,12 +415,12 @@ a {
     }
 }
 
-/* .hero {
-    height: 100vh;
-} */
+.hero {
+    overflow: hidden;
+}
 .hero-bg {
     background: linear-gradient(90deg, rgba(232,204,160,1) 0%, rgba(227,92,9,1) 43%, rgba(255,183,0,1) 100%);;
-    padding: 15px 50px;
+    /* padding: 15px 50px; */
 }
 
 .hero .slider {
@@ -492,26 +495,51 @@ a {
     width: 30px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 770px) {
     .slider {
         height: 400px;
     }
+    .home-banner{
+        flex-direction: column;
+    }
+    /* .home-banner{
+        flex-direction: row;
+    } */
+    .hero .slider{
+        width: auto;
+    }
 }
+
+@media screen and (max-width: 340px){
+    .hero .slider{
+        height: 200px;
+    }
+    .container-2 .width-33{
+        width: 100%;
+    }
+    .container-2{
+        flex-direction: column;
+    }
+}
+
 
 .home-banner {
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+}
+.hero-left{
+    width: 387px;
 }
 
 .officer-section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 10px;
+    padding: 10px 0;
 }
 
 .officer-section .officer-img img {
-    height: 75px;
+    height: 70px;
     border: 1.5px solid #000000;
     border-radius: 10%;
 }
@@ -787,7 +815,7 @@ a {
     margin-left: 10px;
     margin-right: 10px;
     background: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     height: 450px;
     margin-bottom: 30px;
 }
@@ -796,7 +824,7 @@ a {
     margin-left: 10px;
     margin-right: 10px;
     background: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     height: 450px;
     margin-bottom: 30px;
 }
@@ -805,7 +833,7 @@ a {
     margin-left: 10px;
     margin-right: 10px;
     background: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     height: 450px;
     margin-bottom: 30px;
 }
@@ -814,7 +842,7 @@ a {
     margin-left: 15px;
     margin-right: 10px;
     background: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     height: 480px;
     margin-bottom: 30px;
 }
@@ -823,7 +851,7 @@ a {
     margin-left: 10px;
     margin-right: 10px;
     background: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     height: 480px;
     margin-bottom: 30px;
     overflow: hidden;
@@ -833,7 +861,7 @@ a {
     margin-left: 10px;
     margin-right: 10px;
     background: #fff;
-    padding: 20px;
+    /* padding: 20px; */
     height: 480px;
     margin-bottom: 30px;
     overflow: hidden;
@@ -848,12 +876,13 @@ a {
     margin-bottom: 15px;
     padding-top: 2px;
     border: 1px solid #FF6600;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     padding-bottom: 10px;
     padding-top: 15px;
     padding-left: 15px;
     background: linear-gradient(90deg, rgba(19,101,124,1) 16%, rgba(54,190,204,1) 58%, rgba(66,210,218,1) 88%);
     color: white;
+    text-align: center;
 }
 
 .heading-sect h3 {
@@ -875,6 +904,7 @@ a {
     width: 100%;
     float: left;
     margin-bottom: 15px;
+    padding: 0 20px;
 }
 
 .upcoming-event-list {
@@ -902,6 +932,7 @@ a {
 .notice-board-list {
     padding: 0px;
     list-style: none;
+    padding: 0 20px;
 }
 
 .latest-news-ul {
@@ -912,7 +943,11 @@ a {
 
 marquee {
     height: 300px;
+    /* padding: 20px; */
 
+}
+.scrill-notice{
+    padding: 20px;
 }
 
 /********** Latest News, Event, Notice Board Ends **********/
@@ -962,6 +997,7 @@ marquee {
 /********** Information Starts **********/
 .useful-info-ul {
     list-style: none;
+    padding: 0 20px;
 
 }
 
@@ -1017,6 +1053,7 @@ marquee {
 .social-media {
     list-style:none;
     margin-top:10px;
+    padding: 0 20px;
 }
 .social-media li a img {
     width:30px;
@@ -1125,6 +1162,7 @@ marquee {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     grid-auto-rows: 100px;
     grid-auto-flow: dense;
+    padding: 0 20px;
 }
 .grid-wrapper .wide{
     grid-column: span 2;
@@ -1135,4 +1173,8 @@ marquee {
 .grid-wrapper .big{
     grid-row: span 2;
     grid-column: span 2;
+}
+.view-button{
+    padding: 20px;
+    font-weight: 1.2rem;
 }
