--- a/style.css
+++ b/style.css
@@ -80,14 +80,17 @@ a {
 .upper-header .top-header .header-left a {
     color: #000000;
 }
-.upper-header .header-right{
+
+.upper-header .header-right {
     display: flex;
 }
-.upper-header .header-right .social-media-icon i{
+
+.upper-header .header-right .social-media-icon i {
     font-size: 20px;
     padding-right: 5px;
     color: #000000;
 }
+
 .upper-header .header-right .search-box {
     height: 20px;
     display: flex;
@@ -118,7 +121,7 @@ a {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-    max-width: 1150px;
+    max-width: 1220px;
     margin-inline: 1.5rem;
 }
 
@@ -218,7 +221,8 @@ a {
     .nav__logo img {
         height: 50px;
     }
-    .nav__logo .cm-img{
+
+    .nav__logo .cm-img {
         display: none;
     }
 }
@@ -418,8 +422,10 @@ a {
 .hero {
     overflow: hidden;
 }
+
 .hero-bg {
-    background: linear-gradient(90deg, rgba(232,204,160,1) 0%, rgba(227,92,9,1) 43%, rgba(255,183,0,1) 100%);;
+    background: linear-gradient(90deg, rgba(232, 204, 160, 1) 0%, rgba(227, 92, 9, 1) 43%, rgba(255, 183, 0, 1) 100%);
+    ;
     /* padding: 15px 50px; */
 }
 
@@ -499,25 +505,29 @@ a {
     .slider {
         height: 400px;
     }
-    .home-banner{
+
+    .home-banner {
         flex-direction: column;
     }
+
     /* .home-banner{
         flex-direction: row;
     } */
-    .hero .slider{
+    .hero .slider {
         width: auto;
     }
 }
 
-@media screen and (max-width: 340px){
-    .hero .slider{
+@media screen and (max-width: 340px) {
+    .hero .slider {
         height: 200px;
     }
-    .container-2 .width-33{
+
+    .container-2 .width-33 {
         width: 100%;
     }
-    .container-2{
+
+    .container-2 {
         flex-direction: column;
     }
 }
@@ -527,7 +537,8 @@ a {
     display: flex;
     /* justify-content: space-around; */
 }
-.hero-left{
+
+.hero-left {
     width: 387px;
 }
 
@@ -880,7 +891,7 @@ a {
     padding-bottom: 10px;
     padding-top: 15px;
     padding-left: 15px;
-    background: linear-gradient(90deg, rgba(19,101,124,1) 16%, rgba(54,190,204,1) 58%, rgba(66,210,218,1) 88%);
+    background: linear-gradient(90deg, rgba(19, 101, 124, 1) 16%, rgba(54, 190, 204, 1) 58%, rgba(66, 210, 218, 1) 88%);
     color: white;
     text-align: center;
 }
@@ -894,7 +905,7 @@ a {
     padding: 0px;
     font-size: 16px;
     font-weight: 600;
-    font-family 'Roboto',
+    font-family: 'Roboto'
     sans-serif !important;
     color: #2196f3;
     padding-bottom: 5px;
@@ -946,7 +957,8 @@ marquee {
     /* padding: 20px; */
 
 }
-.scrill-notice{
+
+.scrill-notice {
     padding: 20px;
 }
 
@@ -1032,100 +1044,117 @@ marquee {
 
 /********** Information Ends **********/
 
-/********** Footer Starts **********/  
+/********** Footer Starts **********/
 .footer {
     background: #11657c;
     padding: 50px 0px;
 }
+
 .quicklink-menu {
-    list-style:none;
+    list-style: none;
     padding-left: 10px;
 }
-.quicklink-menu li{
+
+.quicklink-menu li {
     color: #fff;
 }
+
 .quicklink-menu li a {
     color: #fff;
     line-height: 2;
     font-size: 15px;
-    text-decoration:none;
+    text-decoration: none;
 }
+
 .social-media {
-    list-style:none;
-    margin-top:10px;
+    list-style: none;
+    margin-top: 10px;
     padding: 0 20px;
 }
+
 .social-media li a img {
-    width:30px;
+    width: 30px;
 }
+
 .social-media li {
-    float:left;
-    padding:0px 8px;
+    float: left;
+    padding: 0px 8px;
 }
+
 .quicklink-heading {
-    font-size:18px;
-    font-weight:bold;
-    color:#000000;
-    margin-bottom:10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #000000;
+    margin-bottom: 10px;
     text-align: center;
 }
+
 .get-in-touch {
-    list-style:none;
+    list-style: none;
     padding-left: 10px;
 }
+
 .get-in-touch li i {
     color: #ed372c;
     font-size: 20px;
 }
+
 .get-in-touch li {
     color: #fff;
     line-height: 2.5;
     font-size: 15px;
-    text-decoration:none;
+    text-decoration: none;
 }
+
 .footer-e-mail {
-    font-size:15px;
-    font-weight:bold;
-    color:#fff;
-    text-decoration:none;
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
 }
+
 .footer-website {
-    font-size:12px;
-    font-weight:bold;
-    color:#fff;
-    text-decoration:none;
+    font-size: 12px;
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
 }
+
 /********** Footer Ends **********/
-/********** Footer Copyright Starts **********/  
+/********** Footer Copyright Starts **********/
 .footer2-bacbor {
     background: #232F3E;
-    padding:10px 0px;
+    padding: 10px 0px;
     border-top: 1px solid #898989;
 }
+
 .footer2-content {
-    font-size:14px;
-    color:#fff;
-    text-align:center;
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
 }
+
 /********** Footer Copyright Ends **********/
 
-@keyframes appear{
-    from{
-        opacity:0;
+@keyframes appear {
+    from {
+        opacity: 0;
         scale: 0.5;
     }
-    to{
+
+    to {
         opacity: 1;
         scale: 1;
     }
 }
-.animation{
+
+.animation {
     animation: appear 1s linear;
     animation-timeline: view();
     animation-range: entry 0% cover 30%;
 }
 
-.scroll-bg{
+.scroll-bg {
     background-image: url(./assets/img/scroll-2.png);
 }
 
@@ -1136,27 +1165,27 @@ marquee {
 
 
 
-.grid-wrapper img{
+.grid-wrapper img {
     max-width: 100%;
     height: auto;
     vertical-align: middle;
     display: inline-block;
 }
 
-.grid-wrapper > div {
+.grid-wrapper>div {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.grid-wrapper > div > img{
+.grid-wrapper>div>img {
     width: 100%;
     height: 100%;
     object-fit: contain;
     border-radius: 5px;
 }
 
-.grid-wrapper{
+.grid-wrapper {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -1164,17 +1193,131 @@ marquee {
     grid-auto-flow: dense;
     padding: 0 20px;
 }
-.grid-wrapper .wide{
+
+.grid-wrapper .wide {
     grid-column: span 2;
 }
-.grid-wrapper .tall{
+
+.grid-wrapper .tall {
     grid-row: span 2;
 }
-.grid-wrapper .big{
+
+.grid-wrapper .big {
     grid-row: span 2;
     grid-column: span 2;
 }
-.view-button{
+
+.view-button {
     padding: 20px;
     font-weight: 1.2rem;
+}
+
+
+
+
+/* about section start  */
+.about-sec-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+
+.about-sec-img img {
+    width: 100%;
+}
+
+.content-side-bar {
+    display: table-cell;
+    min-width: 250px;
+    width: 18%;
+    max-height: 100vw;
+    padding-bottom: 100px;
+    box-shadow: 10px 0 5px -2px #ececec;
+    float: left;
+}
+
+.content-side-bar nav {
+    position: inherit;
+    background-color: transparent;
+    padding-top: 40px;
+}
+
+.content-list {
+    padding-left: 15px;
+}
+
+.content-list-li {
+    padding: 10px;
+    cursor: pointer;
+    margin: 10px;
+    background-color: #FFBD73;
+    border-bottom: 1px solid black;
+}
+
+.content-list-li a {
+    color: #000;
+}
+
+.block-page-title-block h1 {
+    position: relative;
+    padding-left: 10px;
+    border-bottom: 1px solid #ded9d9;
+    padding-bottom: 5px;
+    font-size: 180%;
+    font-weight: 600;
+}
+
+.block-page-title-block h1:before {
+    content: '';
+    display: block;
+    width: 5px;
+    height: 35px;
+    background-color: #FFBD73;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.main-sec {
+    display: block;
+}
+
+.content-right {
+    display: inline-block;
+    padding: 40px 30px;
+    width: 80%;
+}
+
+.content-right p {
+    text-align: justify;
+    padding-top: 10px;
+    font-size: 90%;
+}
+
+table {
+    border: 1px solid #ccc;
+    width: 100%;
+    margin: 0;
+    margin-bottom: 22px;
+    padding: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+table th,
+table td {
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: left;
+    font-size: 14px;
+}
+
+td img {
+    vertical-align: top;
+    max-width: 100%;
+    height: auto;
+}
+table tr th{
+    background-color: #FF9D3D;
 }
