--- a/login/style.css
+++ b/login/style.css
@@ -86,7 +86,7 @@ body {
   height: 100%;
   width: 100%;
   opacity: 0.5;
-  background: #7d2ae8;
+  background: #ef6e05;
 }
 
 .cover .text .text-1,
@@ -134,7 +134,7 @@ body {
   bottom: 0;
   height: 3px;
   width: 25px;
-  background: #7d2ae8;
+  background: #d99400;
 }
 
 .forms .signup-form .title:before {
