--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a {
 
 .upper-header .top-header {
     padding: 7px 35px;
-    background-color: #FF9D3D;
+    background-color: #fe8b3b;
     height: auto;
     display: flex;
     justify-content: space-between;
@@ -431,7 +431,7 @@ a {
 }
 
 .hero .slider {
-    width: 875px;
+    width: 820px;
     max-width: 100vw;
     height: 400px;
     margin: auto;
