--- a/adminhub-master/style.css
+++ b/adminhub-master/style.css
@@ -1020,3 +1020,28 @@ body {
   .text-1{
 	font-size: 17px;
   }
+
+
+
+/* #notification{
+	background-color: #f5f5f5;
+	height: 150px;
+	width: 150px;
+	right: 80px;
+	top: 40px;
+	position: absolute;
+	z-index: 10000000;
+	display: none;
+	border-radius: 5px;
+}
+
+#content nav .notification i:hover #notification{
+	display: block;
+	transition: 0.5s;
+}
+
+#notification .notification-det-text{
+	padding: 5px;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 12px;
+} */
